# diabetes-risk-mlops

./: .dockerignore  .gitignore  Dockerfile  HF_SPACE_README.md  LICENSE  PROJECT_WALKTHROUGH.docx  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: main.py
app/: streamlit_app.py
docs/: methodology.md  model-card.md  results.md
models/: diabetes_pipeline.joblib
notebooks/: 01_eda.ipynb
scripts/: build_demo_image.py  build_walkthrough_doc.py  capture_dashboard.py
src/diabetes_mlops/: __init__.py  config.py  data.py  features.py  predict.py  train.py
tests/: test_data.py  test_predict.py
